--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -3,54 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/dprogramacion.css">
+    <link rel="stylesheet" href="/CET4/static/css/d7mo.css">
     <title> programacion septimo </title>
 </head>
 <body>
     <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
-    <!--Todo la barra lateral-->
+ <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="#"><img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
-        <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="/CET4/templates/index/indexusuario.html"><img src="/CET4/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="/CET4/templates/index/indexhomeoinicio.html"><img src="/CET4/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/CET4/templates/index/indexnotificaciones.html"><img src="/CET4/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="/CET4/templates/index/indexcentralayuda.html"><img src="/CET4/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
-            <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/CET4/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
     </div>
     <div class="cuerpo1">
              <br>
+
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">4to</div>
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
+        <a href="/CET4/templates/index/indexpsw.html" class="texto-superpuesto">Proy I SIST WD  </a>
     </div>
+
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">5to</div>
-    </div>
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/CET4/templates/index/indexpdspm.html" class="texto-superpuesto">PD SOFT P MOD </a> 
+     </div>
+
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">6to</div>
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/CET4/templates/index/indexmodeloss.html" class="texto-superpuesto">MOD. Y SIST </a>
     </div>
+
     <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">7mo</div>
-    
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexpsc.html" class="texto-superpuesto">PDI SIST COMP </a>
     </div>
+       <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexepydl.html" class="texto-superpuesto"> EMP.PROD Y DL </a>
+    </div>
+          <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexorgm.html" class="texto-superpuesto"> org metodos </a>
+    </div>
+    </div>
+
     <div class="footer">  
     </div>
     
