--- a/templates/index/indexin6to.html
+++ b/templates/index/indexin6to.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d5to.css">
-    <title>programacion quinto</title>
+    <link rel="stylesheet" href="/CET4/static/css/d6to.css">
+    <title>6to informatica</title>
 </head>
 <body>
-    <div id="toggle">
-        <span>&#9776;</span> <!--El simbolo de Tres barras-->
-    </div>
- <!--Todo la barra lateral-->
+ 
+    <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
@@ -26,37 +24,40 @@
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
-            <img src="/CET4/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
     </div>
     <div class="cuerpo1">
              <br>
-    <div class="bloque-superpuesto">
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">lab diseño web</div>
-    </div>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbprog.html" class="texto-superpuesto"> lab de programacion/a>
+     </div>
+       <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de programacion</div>
-    </div>
-    <div class="bloque-superpuesto">
+        <a  href="/CET4/templates/index/indexlbapli.html" class="texto-superpuesto">lab de aplicaciones</a>
+     </div>
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de base de datos </div>
-    </div>
-    <br>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
+     </div>
+     <br>
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">lab de redes </div>
-    
-    </div>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbssop.html" class="texto-superpuesto">lab de sistemas operativos </a>
+     </div>
+        <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">modelos y sistemas  </div>
+        <a href="/CET4/templates/index/indexlbssdig.html" class="texto-superpuesto">sistemas digitales </a>
+     </div>
     
-    </div>
-
+        <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexsegurinform.html" class="texto-superpuesto">segur.inform </a>
+     </div>
+    <div>
     <div class="footer">  
     </div>
     
