--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -15,12 +15,12 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="#"><img src="/CET4/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="#"><img src="/CET4/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="#"><img src="/CET4/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="#"><img src="/CET4/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/utils/img/grupo-img4.png" alt="Grupos" class="grupo4"></a>
-        <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="/CET4/templates/index/indexusuario.html"><img src="/CET4/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="/CET4/templates/index/indexhomeoinicio.html"><img src="/CET4/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/CET4/templates/index/indexnotificaciones.html"><img src="/CET4/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="/CET4/templates/index/indexcentralayuda.html"><img src="/CET4/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
