--- a/templates/index/indexin4to.html
+++ b/templates/index/indexin4to.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d5to.css">
-    <title>programacion quinto</title>
+    <link rel="stylesheet" href="/CET4/static/css/d4to.css">
+    <title>programacion  y programacion cuarto</title>
 </head>
 <body>
     <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
- <!--Todo la barra lateral-->
+    <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
@@ -20,7 +20,7 @@
         <a href="/CET4/templates/index/indexnotificaciones.html"><img src="/CET4/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
         <a href="/CET4/templates/index/indexcentralayuda.html"><img src="/CET4/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
         <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
-        <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="#"><img src="/CET4/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
@@ -35,28 +35,28 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">lab diseño web</div>
+        <a href="/CET4/templates/index/indexlbapli.html" class="texto-superpuesto"> lab de aplicaciones </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de programacion</div>
+        <a  href="/CET4/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de base de datos </div>
+        <a href="/CET4/templates/index/indexlbssop.html" class="texto-superpuesto">lab de sistemas operativos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">lab de redes </div>
+        <a href="/CET4/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware </a>
     
     </div>
-    <div class="bloque-superpuesto">
+        <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">modelos y sistemas  </div>
+        <a href="/CET4/templates/index/indexelectronica.html" class="texto-superpuesto">electronica </a>
     
     </div>
-
+    </div>
     <div class="footer">  
     </div>
     
