--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CET4/static/css/d5to.css">
-    <title>programacion quinto</title>
+    <title>programacion  y programacion cuarto</title>
 </head>
 <body>
     <div id="toggle">
@@ -33,28 +33,26 @@
     </div>
     <div class="cuerpo1">
              <br>
-    <div class="bloque-superpuesto">
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">lab diseño web</div>
-    </div>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbssop.html" class="texto-superpuesto"> lab de sistemas opretativos </a>
+      </div>
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de programacion</div>
-    </div>
-    <div class="bloque-superpuesto">
+        <a  href="/CET4/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
+     </div>
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de base de datos </div>
-    </div>
-    <br>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion </a>
+     </div>
+     <br>
+     <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">lab de redes </div>
-    
-    </div>
-    <div class="bloque-superpuesto">
+        <a href="/CET4/templates/index/indexlbssdig.html" class="texto-superpuesto">sistemas digitales </a>
+     </div>
+        <div class="bloque-superpuesto">
         <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">modelos y sistemas  </div>
-    
+        <a href="/CET4/templates/index/indexlbtelein.html" class="texto-superpuesto">teleinform </a>
     </div>
 
     <div class="footer">  
