--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/dprogramacion.css">
-    <title> programacion</title>
+    <link rel="stylesheet" href="/CET4/static/css/d7mo.css">
+    <title>programacion  y programacion cuarto</title>
 </head>
 <body>
-    <div id="toggle">
+    
+     <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
     <!--Todo la barra lateral-->
@@ -22,7 +23,6 @@
         <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
         <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
-    <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
@@ -31,33 +31,30 @@
             </div>
         </form>
     </div>
-<main class="cuerpo1">
-    <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdcuarto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 4to">
-            <div class="texto-superpuesto">4to</div>
-        </a>
-    </section>
-    <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdquinto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 5to">
-            <div class="texto-superpuesto">5to</div>
-        </a>
-    </section>
-    <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexsexto.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 6to">
-            <div class="texto-superpuesto">6to</div>
-        </a>
-    </section>
-    <section class="bloque-superpuesto">
-        <a href="/CET4/templates/index/indexdseptimo.html">
-            <img src="/CET4/static/utils/img/materia1.png" alt="Materias 7mo">
-            <div class="texto-superpuesto">7mo</div>
-        </a>
-    </section>
-</main>
-
+    <div class="cuerpo1">
+             <br>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
+        <a href="/CET4/templates/index/indexproyss.html" class="texto-superpuesto"> proyecto sist  </a>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a  href="/CET4/templates/index/indeximryrds.html" class="texto-superpuesto">imyr redes</a>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/CET4/templates/index/indexmodeloss.html" class="texto-superpuesto">modelos y sistemas</a>
+    </div>
+    <br>
+    <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexlbbd.html" class="texto-superpuesto">base de datos  </a>
+    </div>
+        <div class="bloque-superpuesto">
+        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/CET4/templates/index/indexem" class="texto-superpuesto">empr.prod y di</a>
+    </div>
+   
     <div class="footer">  
     </div>
     
