--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -32,7 +32,7 @@
   <!-- aca estan los botones ya conectados con sus correspondientes pagina les puse el target coso para que no te abra 
    otra pestaña que directamente te lo abra en la misma  -->
 <div class="botones">
-        <a href='/registrarse' target="_parent" class="boton">CREAR CUENTA </a>
+        <a href='/crearcuenta' target="_parent" class="boton">CREAR CUENTA </a>
         <a href="/iniciarsesion" target="_parent" class="boton">INICIAR SESION </a>
 </body>
 </html>
