--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -50,7 +50,12 @@
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
         <div class="texto-superpuesto">7mo</div>
-    
+        <h2>Elige una materia para preguntar:</h2>
+       <button onclick="window.location.href='/comentario/materia/3'">Matemáticas</button>
+        <button onclick="window.location.href='/comentario/materia/4'">Lengua</button>
+<!-- Agrega más materias con su id correspondiente -->
+        </form>
+<script src="/static/js/comentarios.js"></script>
     </div>
     <div class="footer">  
     </div>
