cambie las rutas

--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d6to.css">
+    <link rel="stylesheet" href="/static/css/d6to.css">
     <title>programacion sexto</title>
 </head>
 <body>
@@ -12,19 +12,19 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a href="/CET4/templates/index/indexusuario.html"><img src="/CET4/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="/CET4/templates/index/indexhomeoinicio.html"><img src="/CET4/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
-        <a href="/CET4/templates/index/indexnotificaciones.html"><img src="/CET4/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a href="/CET4/templates/index/indexcentralayuda.html"><img src="/CET4/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a href="#"><img src="/CET4/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
-        <a href="#"><img src="/CET4/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a href="/templates/index/indexhomeoinicio.html"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/templates/index/indexnotificaciones.html"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
         <form class="buscador-logo">
             <div class="buscador-logo2">
             <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
-            <img src="/CET4/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
         </form>
@@ -32,31 +32,31 @@
     <div class="cuerpo1">
              <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/CET4/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
+        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
     </div>
     <a href='/comentario'>Comentarios</a>
     <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/indexlbproc.html" class="texto-superpuesto">lab.proc.ind</a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/templates/index/indexlbproc.html" class="texto-superpuesto">lab.proc.ind</a>
     </div>
     <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/web_dinamica.html" class="texto-superpuesto">des.api.WEB DINAMICA </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/templates/index/web_dinamica.html" class="texto-superpuesto">des.api.WEB DINAMICA </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/CET4/templates/index/indexsegurinform.html" class="texto-superpuesto">seguridad informatica</a>
-    
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/templates/index/indexsegurinform.html" class="texto-superpuesto">seguridad informatica</a>
+
     </div>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/indexssdgestn.html" class="texto-superpuesto">sistemas de gestion  </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/templates/index/indexssdgestn.html" class="texto-superpuesto">sistemas de gestion  </a>
     </div>
      <div class="bloque-superpuesto">
-        <img src="/CET4/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/CET4/templates/index/indexwbestatc.html" class="texto-superpuesto">web estatica </a>
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/templates/index/indexwbestatc.html" class="texto-superpuesto">web estatica </a>
     </div>
     <div class="footer">  
     </div>
