arregle ruta a /crearcuenta en inicio de ses

--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -28,7 +28,7 @@
       </form>
       
       <div class="links">
-        ¿NO TIENE UNA CUENTA? <a href="#">CREAR CUENTA</a>
+        ¿NO TIENE UNA CUENTA? <a href="/crearcuenta">CREAR CUENTA</a>
       </div>
     </section>
 
