diseño web hice el html

--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -54,6 +54,10 @@
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
         <a href="/templates/index/indexlbtelein.html" class="texto-superpuesto">teleinform </a>
     </div>
+     <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/templates/index/indexdiseñowb.html" class="texto-superpuesto">diseñoweb </a>
+     </div>
 
     <div class="footer">  
     </div>
