hice los comentarios para que se vea el contenido y el nombre de usuario, me falta que se vea el titulo y las repsuestas :)

--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -35,21 +35,21 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href='/4toprogramacion' class="texto-superpuesto">4to</a> 
+        <a href='/programacion/4toprogramacion' class="texto-superpuesto">4to</a> 
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/5toprogramacion' class="texto-superpuesto">5to</a>
+        <a href='/programacion/5toprogramacion' class="texto-superpuesto">5to</a>
     </div>
    <div class="bloque-superpuesto">
     <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-    <a href='/6toprogramacion' class="texto-superpuesto">6to</a>
+    <a href='/programacion/6toprogramacion' class="texto-superpuesto">6to</a>
 </div>
 
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/7toprogramacion' class="texto-superpuesto"> 7mo</a>
+        <a href='/programacion/7toprogramacion' class="texto-superpuesto"> 7mo</a>
     </div>
     <div class="footer">  
     </div>
