--- a/templates/index/indexdcuarto.html
+++ b/templates/index/indexdcuarto.html
@@ -35,27 +35,27 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbapli.html" class="texto-superpuesto"> lab de aplicaciones </a>
+        <a href='/programacion/4toprogramacion/labaplicaciones' class="texto-superpuesto"> lab de aplicaciones </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
+        <a  href='/programacion/4toprogramacion/labprogramacion' class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexlbssop.html" class="texto-superpuesto">lab de sistemas operativos </a>
+        <a href='/programacion/4toprogramacion/labsistemasoperativos' class="texto-superpuesto">lab de sistemas operativos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
-        <img src="/static/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware </a>
-    
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/programacion/4toprogramacion/labhardware" class="texto-superpuesto">lab de hardware </a>
+
     </div>
       
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexelectronica.html" class="texto-superpuesto">electronica </a>
-    
+        <a href="/programacion/4toprogramacion/electronica" class="texto-superpuesto">electronica </a>
+
     </div>
      </div>
     <div class="footer">  
