cambiamos el titulo de la pagina programacion osea que nosotros cambiamos el lugar  el titulo de la caja de comentario

--- a/static/css/indexcajacomentario.css
+++ b/static/css/indexcajacomentario.css
@@ -184,3 +184,19 @@ button:hover {
     font-size: 18px;
   }
 }
+.respuestasparaestilaruwu{
+  margin-top: 3rem;
+
+}
+
+#titulo{
+  margin-left: 35%;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+
+}
+.comment{
+  
+
+}
+
