--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -47,6 +47,7 @@
     <div class="footer">  
     </div>
     <script src="/static/js/comentarios.js"></script>
+    <script src="/static/js/barralateral.js"></script>
 
 </body>
 </html>
