arreglé los <a href=

--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -33,25 +33,25 @@
     </div>
 <main class="cuerpo1">
     <section class="bloque-superpuesto">
-        <a href="/templates/index/indexdcuarto.html">
+        <a href="/informatica/4toinformatica">
             <img src="/static/utils/img/materia1.png" alt="Materias 4to">
             <a href="/informatica/4toinformatica" class="texto-superpuesto">4to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/templates/index/indexdquinto.html">
+        <a href="/informatica/5toinformatica">
             <img src="/static/utils/img/materia1.png" alt="Materias 5to">
             <a href="/informatica/5toinformatica" class="texto-superpuesto">5to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/templates/index/indexsexto.html">
+        <a href="/informatica/6toinformatica">
             <img src="/static/utils/img/materia1.png" alt="Materias 6to">
             <a href="/informatica/6toinformatica" class="texto-superpuesto">6to</a>
         </a>
     </section>
     <section class="bloque-superpuesto">
-        <a href="/templates/index/indexdseptimo.html">
+        <a href="/informatica/7moinformatica">
             <img src="/static/utils/img/materia1.png" alt="Materias 7mo">
             <a href="/informatica/7moinformatica" class="texto-superpuesto">7mo</div>
         </a>
