hice que solo se vean los comentarios de la materia correspondiente, haciendo que js reciba el id de las materias

--- a/templates/index/indexdquinto.html
+++ b/templates/index/indexdquinto.html
@@ -35,26 +35,25 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <div class="texto-superpuesto">lab diseño web</div>
+        <a href='/programacion/5toprogramacion/labdiseñoweb' class="texto-superpuesto">lab diseño web</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de programacion</div>
+        <a href='/programacion/5toprogramacion/labprogramacion' class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <div class="texto-superpuesto">lab de base de datos </div>
+        <a href='/programacion/5toprogramacion/labbasededatos' class="texto-superpuesto">lab de base de datos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">lab de redes </div>
-    
+        <a href='/programacion/5toprogramacion/labredes' class="texto-superpuesto">lab de redes </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <div class="texto-superpuesto">modelos y sistemas  </div>
-    
+        <a href='/programacion/5toprogramacion/modysistemas' class="texto-superpuesto">modelos y sistemas  </a>
+
     </div>
 
     <div class="footer">  
