cambie las clases de usuario, titulo, contenido, y a los botones de responder y ver respuesta. Ademas cambie las rutas de 4to 5to 6to de programacion (me falta 7mo) en python

--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -33,30 +33,29 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion</a>
-    </div>
-    <a href='/comentario'>Comentarios</a>
-    <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexlbproc.html" class="texto-superpuesto">lab.proc.ind</a>
+        <a href='/programacion/6toprogramacion/LabProgramacion' class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/web_dinamica.html" class="texto-superpuesto">des.api.WEB DINAMICA </a>
+        <a href="/programacion/6toprogramacion/LabProcesosIndustriales" class="texto-superpuesto">lab.proc.ind</a>
+    </div>
+    <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href="/programacion/6toprogramacion/LabWebDinamica" class="texto-superpuesto">des.api.WEB DINAMICA </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexsegurinform.html" class="texto-superpuesto">seguridad informatica</a>
+        <a href="/programacion/6toprogramacion/LabSeguridadInformática" class="texto-superpuesto">seguridad informatica</a>
 
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexssdgestn.html" class="texto-superpuesto">sistemas de gestion  </a>
+        <a href="/programacion/6toprogramacion/LabSistemasDigitales" class="texto-superpuesto">sistemas de gestion  </a>
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexwbestatc.html" class="texto-superpuesto">web estatica </a>
+        <a href='/programacion/6toprogramacion/LabWebEstatica' class="texto-superpuesto">web estatica </a>
     </div>
     <div class="footer">  
     </div>
