agregue todas las rutas y botones de comentarios en septimo desde python(rutas) y html (botones)

--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CET4/static/css/d7mo.css">
+    <link rel="stylesheet" href="/static/css/d7mo.css">
     <title> programacion septimo </title>
 </head>
 <body>
@@ -37,31 +37,31 @@
 
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexpsw.html" class="texto-superpuesto">Proy I SIST WD  </a>
+        <a href='/programacion/7moprogramacion/PytoSistWd' class="texto-superpuesto">Proy I SIST WD  </a>
     </div>
 
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexpdspm.html" class="texto-superpuesto">PD SOFT P MOD </a> 
+        <a href='/programacion/7moprogramacion/PdSoftPMov' class="texto-superpuesto">PD SOFT P MOD </a> 
      </div>
 
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexmodeloss.html" class="texto-superpuesto">MOD. Y SIST </a>
+        <a href='/programacion/7moprogramacion/ModSistemas' class="texto-superpuesto">MOD. Y SIST </a>
     </div>
 
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexpsc.html" class="texto-superpuesto">PDI SIST COMP </a>
+        <a href='/programacion/7moprogramacion/PdiSistComp' class="texto-superpuesto">PDI SIST COMP </a>
     </div>
        <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexepydl.html" class="texto-superpuesto"> EMP.PROD Y DL </a>
+        <a href='/programacion/7moprogramacion/EmprProdDl' class="texto-superpuesto"> EMP.PROD Y DL </a>
     </div>
           <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexorgm.html" class="texto-superpuesto"> org metodos </a>
+        <a href='/programacion/7moprogramacion/OrgMetodos' class="texto-superpuesto"> org metodos </a>
     </div>
     </div>
 
