--- a/templates/index/indexempr.html
+++ b/templates/index/indexempr.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
-  <link rel="stylesheet" href="/CET4/static/css/indexcajacomentario.css" />
+  <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
 </head>
 <body>
   <nav class="elcostado ordenado">
     <div id="out">
       <button aria-label="Cerrar   sesión">&#9587;</button>
     </div>
-    <a href="#"><img src="/utils/img/usuario.png" alt="Perfil" class="usuario" /></a>
-    <a href="#"><img src="/utils/img/casa-img1.png" alt="Inicio" class="casa1" /></a>
-    <a href="#"><img src="/utils/img/campana-img2.png" alt="Notificaciones" class="campana2" /></a>
-    <a href="#"><img src="/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3" /></a>
-    <a href="#"><img src="/utils/img/grupo-img4.png" alt="Grupos" class="grupo4" /></a>
-    <a href="#"><img src="/utils/img/opciones-img5.png" alt="Configuración" class="opcion5" /></a>
+    <a href="#"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario" /></a>
+    <a href="#"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1" /></a>
+    <a href="#"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2" /></a>
+    <a href="#"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3" /></a>
+    <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="Grupos" class="grupo4" /></a>
+    <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuración" class="opcion5" /></a>
   </nav>
 
   <div class="separador-lateral"></div>
@@ -29,7 +29,13 @@
     </header>
 
     <section class="caja-comentario">
-      <form>
-        <label for="comentario" class="sr-only">Escribe tu comentario</label>
+      <form id="commentForm">
+        <input type="text" id="titulo" name="titulo" placeholder="Título de la pregunta" required>
         <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
-        <div>
+        <input type="hidden" id="id_mat" name="id_mat" value="{{ id_mat }}">
+        <button type="submit">Enviar</button>
+      </form>
+
+      <div id="commentsSection"></div>
+  </main>
+<script src="/static/js/comentarios.js"></script>
