agregue comentarios en el python, intente vincular el js en dprogramacionindex pero no funciono

--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -51,9 +51,8 @@
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
         <a href='/programacion/7moprogramacion' class="texto-superpuesto"> 7mo</a>
     </div>
-    <div class="footer">  
-    </div>
-    
+    <div class="footer"></div>
 
+<script src="/static/js/barralateral.js"></script>
 </body>
 </html>
